Get rid of some cruft for development use